remove gulp, add vite

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Loan</title>
-    <link rel="stylesheet" href="assets/css/font.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css/font.css">
+    <link rel="stylesheet" href="./src/assets/css/animate.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
 </head>
 <body>
     <div class="page">
@@ -238,7 +238,7 @@
     
             <div class="difference__wrapper">
                 <div class="difference__info">
-                    <div class="title">The difference</span></div>
+                    <div class="title">The <span>difference</span></div>
                     <div class="subtitle">Between education 10 years ago and today</div>
                     <div class="difference__info-cards">
                         <div class="officerold">
@@ -1088,6 +1088,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
