bugfix es modules

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                 <div class="feed__item feed__item-active">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_1.png" alt="Andrew">
+                            <img src="./src/assets/img/feed_1.png" alt="Andrew">
                         </div>
                         <div class="author">
                             <div class="author__name">Andrew Jackson</div>
@@ -805,7 +805,7 @@
                 <div class="feed__item ">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_2.png" alt="Cynthia Weber">
+                            <img src="./src/assets/img/feed_2.png" alt="Cynthia Weber">
                         </div>
                         <div class="author">
                             <div class="author__name">Cynthia Weber</div>
@@ -834,7 +834,7 @@
                 <div class="feed__item ">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_3.png" alt="Owen Thornton">
+                            <img src="./src/assets/img/feed_3.png" alt="Owen Thornton">
                         </div>
                         <div class="author">
                             <div class="author__name">Owen Thornton</div>
@@ -863,7 +863,7 @@
                 <div class="feed__item ">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_1.png" alt="Marion Murphy">
+                            <img src="./src/assets/img/feed_1.png" alt="Marion Murphy">
                         </div>
                         <div class="author">
                             <div class="author__name">Marion Murphy</div>
@@ -892,7 +892,7 @@
                 <div class="feed__item ">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_2.png" alt="Marion Murphy">
+                            <img src="./src/assets/img/feed_2.png" alt="Marion Murphy">
                         </div>
                         <div class="author">
                             <div class="author__name">Marion Murphy</div>
@@ -921,7 +921,7 @@
                 <div class="feed__item ">
                     <div class="feed__item-info">
                         <div class="photo">
-                            <img src="assets/img/feed_3.png" alt="Marion Murphy">
+                            <img src="./src/assets/img/feed_3.png" alt="Marion Murphy">
                         </div>
                         <div class="author">
                             <div class="author__name">Marion Murphy</div>
@@ -1088,6 +1088,6 @@
         </div>
     </div>
 
-    <script src="./src/js/main.js"></script>
+    <script type="module" src="./src/js/main"></script>
 </body>
 </html>
