--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Loan</title>
+    <title>Bring it up</title>
     <link rel="stylesheet" href="./src/assets/css/font.css" />
     <link rel="stylesheet" href="./src/assets/css/animate.css" />
     <link rel="stylesheet" href="./src/assets/css/style.css" />
