--- a/modules.html
+++ b/modules.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Modules</title>
-    <link rel="stylesheet" href="assets/css/font.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css/font.css">
+    <link rel="stylesheet" href="./src/assets/css/animate.css">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
 </head>
 <body>
     <div class="moduleapp">
@@ -1143,6 +1143,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script type="module" src="./src/js/main"></script>
 </body>
 </html>
